# wilor-nano

./: pyproject.toml
src/wilor_nano/: hand_detection.py  hand_keypoints.py
src/wilor_nano/api/: mano_inference.py  wilor_inference.py
src/wilor_nano/models/: wilor.py
src/wilor_nano/pipelines/: wilor_hand_pose3d_estimation_pipeline.py
tools/: mano_inference.py
