[project]
authors = [{ name = "pablo vela", email = "pablovela5620@gmail.com" }]
dependencies = [
    "timm",
    "einops",
    "ultralytics==8.3.162", # needed to avoid weights_only bug in pytorch 2.7+
    "opencv-python",
    "huggingface_hub",
    "scikit-image",
    "roma", "onnxruntime-gpu>=1.23.2,<2",
]
name = "wilor-nano"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]


[tool.pixi.tasks]
image-example = "python tools/wilor_inference.py --image-path assets/img.png"
video-example = "python tools/wilor_inference.py --video-path assets/video.mp4"

[tool.pixi.dependencies]
# CUDA Build Tools
cuda-compiler = "*"
cuda-version = "12.8.*"
cuda-cudart-dev = "*"
cuda-crt = "*"
libcusparse-dev = "*"
cuda-driver-dev = "*"
cuda-nvcc = "*"
cuda-nvrtc-dev = "*"
cuda-nvtx = "*"
cuda-nvtx-dev = "*"
cuda-nvml-dev = "*"
cuda-profiler-api = "*"

# CUDA Libraries
cudnn = "*"
libcublas-dev = "*"
libcudss-dev = "*"
libcufile-dev = "*"
libcufft-dev = "*"
libcurand-dev = "*"
libcusolver-dev = "*"
cusparselt = "*"
libnvjitlink = "*"
# cuda126 end
dill = ">=0.4.0,<0.5"
py-opencv = ">=4.12.0,<5"


[tool.pixi.pypi-dependencies]
wilor_nano = { path = ".", editable = true }
simplecv = { git = "https://github.com/pablovela5620/simplecv.git", tag = "v0.5.1" }
torch = { version = ">=2.7.0", index = "https://download.pytorch.org/whl/cu128" }
torchvision = { version = ">=0.20.1", index = "https://download.pytorch.org/whl/cu128" }
rtmlib = { git = "https://github.com/pablovela5620/rtmlib.git", rev = "98bca2193c39b349034b280803b54c9ee58f7c68" }

[tool.pixi.feature.dev.dependencies]
beartype = ">=0.19.0,<0.20"
ruff = ">=0.12.7,<0.13"
pytest = "*"

[tool.pixi.environments]
dev = { features = ["dev"] }

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore = [
    "E501",  # Line too long.
    "F722",  # Forward annotation false positive from jaxtyping. Should be caught by pyright.
    "F821",  # Forward annotation false positive from jaxtyping. Should be caught by pyright.
    "UP037",
]
